discussion/kv_engine/150870/150870_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

CBD-3928: Update existing license headers to BSL (other)

Change-Id: I201a50f015626d15804d780b3078de31b520722b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-04-12 15:22:25.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 15:24:24.000000000
Message: 
Patch Set 2: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-12 15:44:45.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29951/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29951/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17732/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9953/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9953/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9816/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9816/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10184/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10184/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8297/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:14:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8297/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:14:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8297/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34897/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6842/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8885/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 15:45:07.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-04-12 15:45:22.000000000
Message: 
Patch Set 2: Verified+1
----------------------------------------------------------------------------------------------------------------------
